Update cron for Java 11/Solr 8
Also remove old unused cron processes and scripts
Update to use ils_barcode rather than cat_username when updating reading history
optimize a few more tables